--- a/_includes/ratebox.html
+++ b/_includes/ratebox.html
@@ -1,11 +1,12 @@
-<div style="margin-right: 0px;" class="row">
-	<div style="margin-left: 25px; width: 80px" class="col_half norightmargin inline-block">
+<div style="margin-right: 0px;" class="row rates_no_margin" data-class-xxs="center">
+	<h3>Rates</h3>
+	<div class="col_half norightmargin inline-block" data-class-lg="ratebox" data-class-md="ratebox" data-class-sm="ratebox" data-class-xs="ratebox" data-class-xxs="ratebox_xxs">
 		<strong>1/2 Hour</strong></br>
 		<strong>1 Hour</strong></br>
 		<strong>1.5 Hour</strong></br>
 	</div>
 
-	<div style="text-align: right; width: 50px;" class="col_half fright col_last norightmargin noleftmargin" >
+	<div style="text-align: right; width: 80px;" class="col_half fright col_last norightmargin noleftmargin" >
     	$60</br>
     	$90</br>
     	$125</br>
