--- a/_includes/timebox.html
+++ b/_includes/timebox.html
@@ -1,5 +1,6 @@
-<div style="margin-right: 0px;" class="row">
-	<div style="margin-left: 25px; width: 70px;" class="col_half norightmargin inline-block">
+<div style="margin-right: 0px;" class="row rates_no_margin" data-class-xxs="center">
+	<h3>Hours</h3>
+	<div style="text-align: left; margin-left: 25px; width: 75px;" class="col_half norightmargin inline-block">
 		<strong>Monday</strong></br>
 		<strong>Tuesday</strong></br>
 		<strong>Wednesday</strong></br>
@@ -9,7 +10,7 @@
 		<strong>Sunday</strong></br>
 	</div>
 
-	<div  style="text-align: right; width: 100px;" class="col_half fright col_last norightmargin noleftmargin">
+	<div  style="text-align: right; width: 80px;" class="col_half fright col_last norightmargin noleftmargin">
     	10:00 - 5:00</br>
     	10:00 - 8:00</br>
     	10:00 - 5:00</br>
