--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@
       
     <!-- Page Title and content
     ============================================= -->
-    <section id="content" class="" style="background-image: url('{{site.url}}/assets/images/bg_body_mountain.jpg'); background-repeat: no-repeat; ">
+    <section id="page-title" class="page-title-parallax notoppadding" style="background-repeat: no-repeat; " data-class-lg="lg-bg-image" data-class-md="lg-bg-image" data-class-sm="lg-bg-image" data-class-xs="lg-bg-image" data-class-xxs="sm-bg-image">
       <div class="content-wrap">
         <div class="container clearfix notopmargin">
 
