--- a/_includes/tabs.html
+++ b/_includes/tabs.html
@@ -40,7 +40,7 @@
           <h4 class="fleft">Hours</h4>
           <div class="clear"></div>
         </div>
-        <div style="font-size: 16px; line-height: 18px" data-class-lg="rightmargin-lg leftmargin-lg" data-class-md="rightmargin-lg leftmargin-lg" data-class-sm="rightmargin-lg leftmargin-lg" data-class-xs="rightmargin-sm leftmargin-sm" data-class-xxs="">
+        <div style="font-size: 16px; line-height: 18px" data-class-lg="rightmargin-sm leftmargin-sm" data-class-md="rightmargin-sm leftmargin-sm" data-class-sm="rightmargin-sm leftmargin-sm" data-class-xs="rightmargin-sm leftmargin-sm" data-class-xxs="">
           {% include timebox.html %}
         </div>
         <div class="row">
