--- a/_includes/home_page_testimonials.html
+++ b/_includes/home_page_testimonials.html
@@ -7,6 +7,44 @@
       <div class="col-md-6 bottommargin">
         <div class="testimonial">
           <div class="testi-content">
+            <p>
+              <a href="https://www.youtube.com/watch?v=oKya2ymtKYc" data-lightbox="iframe">
+                <img src="https://img.youtube.com/vi/oKya2ymtKYc/0.jpg" frameborder="0">
+              </a>
+            </p>
+            <div class="testi-meta">
+              Kyle
+              <span>Web Develomment/Martial Artist</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-6 bottommargin">
+        <div class="testimonial">
+          <div class="testi-content">
+            <p>
+              <a href="https://www.youtube.com/watch?v=RC_Ao0gda3k" data-lightbox="iframe">
+                <img src="https://img.youtube.com/vi/RC_Ao0gda3k/0.jpg" frameborder="0">
+              </a>
+            </p>
+            <div class="testi-meta">
+              Josh
+              <span>Rock Climber and Small Business Owner</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <!-- Row 1 -->
+
+    <!-- Row 2 -->
+    <div class="row hidden-sm hidden-xs hidden-xxs">
+
+      <div class="col-md-6 bottommargin">
+        <div class="testimonial">
+          <div class="testi-content">
             <p>I walked out of my first treatment with Jeremy impressed that he did exactly what I wanted him to do. Deep tissue massage treatment is nothing like a relaxing day at a spa, but it is precisely what I need... <a title="Read more KWmassage Testimonials" href="{{site.baseurl}}/about/testimonials">Read more</a></p>
             <div class="testi-meta">
               Carrie
@@ -23,36 +61,6 @@
             <div class="testi-meta">
               Andrew
               <span>Professional Football Player</span>
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </div>
-    <!-- Row 1 -->
-
-    <!-- Row 2 -->
-    <div class="row hidden-sm hidden-xs hidden-xxs">
-
-      <div class="col-md-6 bottommargin">
-        <div class="testimonial">
-          <div class="testi-content">
-            <p>I only have good things to say about KW Massage. Jeremy is very personable and easy to schedule appointments with. I used to get terrible tension headaches, but monthly appointments with Jeremy have made them all but disappear!</p>
-            <div class="testi-meta">
-              SG
-              <span>Kitchener</span>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-6 bottommargin">
-        <div class="testimonial">
-          <div class="testi-content">
-            <p>Getting deep tissue massage from Jeremy for the past 6 years has been an absolute life saver. Jeremy has been able to help me relieve many of my ailments and bodily pains. I competed in 2013 Jiu-Jitsu World... <a title="Read more KWmassage Testimonials" href="{{site.baseurl}}/about/testimonials">Read more</a></p>
-            <div class="testi-meta">
-              KOB
-              <span>Web Development/Home Renovations</span>
             </div>
           </div>
         </div>
