--- a/_includes/home_page_testimonials.html
+++ b/_includes/home_page_testimonials.html
@@ -5,11 +5,11 @@
     <div class="row">
 
       <div class="col-md-6 bottommargin">
-        <div class="testimonial">
-          <div class="testi-content">
+        <div class="testimonial center">
+          <div class="testi-content before_and_after_none">
             <p>
               <a href="https://www.youtube.com/watch?v=oKya2ymtKYc" data-lightbox="iframe">
-                <img src="https://img.youtube.com/vi/oKya2ymtKYc/0.jpg" frameborder="0">
+                <img src="https://img.youtube.com/vi/oKya2ymtKYc/1.jpg" alt="Massage Therapist Testimonial, Kyle">
               </a>
             </p>
             <div class="testi-meta">
@@ -21,11 +21,11 @@
       </div>
 
       <div class="col-md-6 bottommargin">
-        <div class="testimonial">
-          <div class="testi-content">
+        <div class="testimonial center">
+          <div class="testi-content before_and_after_none">
             <p>
               <a href="https://www.youtube.com/watch?v=RC_Ao0gda3k" data-lightbox="iframe">
-                <img src="https://img.youtube.com/vi/RC_Ao0gda3k/0.jpg" frameborder="0">
+                <img src="https://img.youtube.com/vi/RC_Ao0gda3k/1.jpg" alt="Massage Therapist Testimonial, Josh">
               </a>
             </p>
             <div class="testi-meta">
