--- a/_includes/page_footer.html
+++ b/_includes/page_footer.html
@@ -32,7 +32,7 @@
                     </div>
                     
                     <div class="col_one_third fright col_last">
-                        <div style="text-align: right"class="widget subscribe-widget clearfix">
+                        <div style="text-align: right" class="widget subscribe-widget clearfix">
                             <h5 style="margin: 0">229 Frederick Street</h5>
                             <h5 style="margin: 0">Kitchener, Ontario</h5>
                             <!-- <h5 style="margin: 0">Telephone: <strong>(519)745-4112</strong></h5> -->
@@ -60,3 +60,7 @@
     </div>
 <!-- #copyrights end -->
 </footer>
+ <!-- External JavaScripts
+  ============================================= -->
+  <script type="text/javascript" src="{{site.url}}/js/jquery.js"></script>
+  <script type="text/javascript" src="{{site.url}}/js/plugins.js"></script>
