--- a/_includes/page_leftcol.html
+++ b/_includes/page_leftcol.html
@@ -11,7 +11,7 @@
 
 <!-- Schedule Now Button -->
 <div>
-	<a href="{{site.baseurl}}/clinic-information" title="Schedule Massage Therapy Appointment Now"><button style="margin: 10px" class="btn btn-danger fright">Schedule Now</button></a>
+	<a href="{{site.baseurl}}/clinic-information" title="Schedule Massage Therapy Appointment Now" style="margin: 10px" class="btn btn-danger fright">Schedule Now</a>
 </div>
 <!-- Schedule Now Button Ends -->
 <div class="clearfix"></div>
