--- a/style.css
+++ b/style.css
@@ -540,7 +540,7 @@ body.stretched .container-fullwidth {
 /* ----------------------------------------------------------------
 	Flex Slider
 -----------------------------------------------------------------*/
-
+/*
 
 .fslider,
 .fslider .flexslider,
@@ -618,7 +618,7 @@ html[xmlns] .slider-wrap {display: block;}
 
 .flex-control-nav li:hover a,
 .flex-control-nav li a.flex-active { background-color: #FFF; }
-
+*/
 
 /* ----------------------------------------------------------------
 	Swiper Slider
@@ -819,7 +819,7 @@ html[xmlns] .slider-wrap {display: block;}
 /* ----------------------------------------------------------------
 	Top Social
 -----------------------------------------------------------------*/
-
+/*
 #top-social,
 #top-social ul { margin: 0; }
 
@@ -861,7 +861,7 @@ html[xmlns] .slider-wrap {display: block;}
 	font-size: 14px;
 }
 
-
+*/
 /* ----------------------------------------------------------------
 	Top Login
 -----------------------------------------------------------------*/
