--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -2,7 +2,7 @@
 
 <div id="quick-contact-form-result" data-notify-type="success" data-notify-msg="<i class=icon-ok-sign></i> Message Sent Successfully!"></div>
 
-<form id="quick-contact-form" name="quick-contact-form" action="include/quickcontact.php" method="post" class="quick-contact-form nobottommargin">
+<form id="quick-contact-form" name="quick-contact-form" action="/include/quickcontact.php" method="post" class="quick-contact-form nobottommargin">
 
     <div class="form-process"></div>
     <div class="input-group divcenter">
