--- a/_includes/home_page_header.html
+++ b/_includes/home_page_header.html
@@ -30,7 +30,7 @@
 <section id="slider" class="slider-parallax swiper-wrapper full-screen clearfix" style="background: url('{{site.url}}/assets/images/bg_body_mountain.jpg') center; backgroung-repeat: no-repeat; overflow: visible; background-size: cover;" data-height-lg="650" data-height-md="550" data-height-sm="550" data-height-xs="550" data-height-xxs="550">
   <div class="swiper-container">
     <div class="swiper-wrapper">
-      
+
       <!--First Slide-->
       <div class="swiper-slide">
 
@@ -43,10 +43,11 @@
         <!-- Picture -->
 
         <div style="top: 0px !important" class="slider-caption slider-caption-right notopmargin">
-        {% include tabs.html %}
+          {% include tabs.html %}
         </div>
 
       </div>
+    </div>
   </div>
 </section>
 
