--- a/_includes/timebox.html
+++ b/_includes/timebox.html
@@ -1,22 +1,22 @@
 <div style="margin-right: 0px;" class="row rates_no_margin" data-class-xxs="center">
 	<h3>Hours</h3>
 	<div style="text-align: left; margin-left: 25px; width: 70px;" class="col_half norightmargin inline-block">
-		<strong>Monday</strong></br>
-		<strong>Tuesday</strong></br>
-		<strong>Wednesday</strong></br>
-		<strong>Thursday</strong></br>
-		<strong>Friday</strong></br>
-		<strong>Saturday</strong></br>
-		<strong>Sunday</strong></br>
+		<strong>Monday</strong><br />
+		<strong>Tuesday</strong><br />
+		<strong>Wednesday</strong><br />
+		<strong>Thursday</strong><br />
+		<strong>Friday</strong><br />
+		<strong>Saturday</strong><br />
+		<strong>Sunday</strong><br />
 	</div>
 
 	<div  style="text-align: right; width: 90px;" class="col_half fright col_last norightmargin noleftmargin">
-    	10:00 - 5:00</br>
-    	10:00 - 8:00</br>
-    	10:00 - 5:00</br>
-    	10:00 - 3:00</br>
-    	10:00 - 3:00</br>
-    	Closed</br>
-    	Closed</br>
+    	10:00 - 5:00<br />
+    	10:00 - 8:00<br />
+    	10:00 - 5:00<br />
+    	10:00 - 3:00<br />
+    	10:00 - 3:00<br />
+    	Closed<br />
+    	Closed<br />
 	</div>
 </div>
