/index.html hlaf

--- a/_includes/home_page_nav.html
+++ b/_includes/home_page_nav.html
@@ -3,27 +3,26 @@
 <nav id="primary-menu" class="style-6">
 
   <ul dir="rtl" class="one-page-menu" >
-    <li><a href="{{site.url}}/"><div>Home</div></a></li>
-    <li><a href="{{site.url}}/about" title="Jeremy's bio and massage therapy background"><div>About</div></a>
+    <li><a href="{{site.url}}/index.html"><div>Home</div></a></li>
+    <li><a href="{{site.url}}/about/index.html" title="Jeremy's bio and massage therapy background"><div>About</div></a>
       <ul>
-        <li><a href="{{site.url}}/about/testimonials"><div>Testimonials</div></a></li>
-        <li><a href="{{site.url}}/about/rock-climbing-as-a-lifestyle"><div>Rock Climbing as a Lifestyle</div></a></li>
-        <li><a href="{{site.url}}/about/welcome"><div>Welcome</div></a></li>
+        <li><a href="{{site.url}}/about/testimonials/index.html"><div>Testimonials</div></a></li>
+        <li><a href="{{site.url}}/about/rock-climbing-as-a-lifestyle/index.html"><div>Rock Climbing as a Lifestyle</div></a></li>
       </ul>
     </li>
-    <li><a href="{{site.url}}/clinic-information" title="Book Massage Therapy Appointment Online Now"><div>Appointments</div></a>
+    <li><a href="{{site.url}}/clinic-information/index.html" title="Book Massage Therapy Appointment Online Now"><div>Appointments</div></a>
       <ul>
-        <li><a href="{{site.url}}/clinic-information/clinic"><div>Clinic</div></a></li>
-        <li><a href="{{site.url}}/clinic-information/note-to-new-massage-therapy-clients"><div>Note to New Clients</div></a></li>
+        <li><a href="{{site.url}}/clinic-information/clinic/index.html"><div>Clinic</div></a></li>
+        <li><a href="{{site.url}}/clinic-information/note-to-new-massage-therapy-clients/index.html"><div>Note to New Clients</div></a></li>
       </ul>
     </li>
-    <li><a href="{{site.url}}/contact"><div>Contact</div></a></li>
-    <li><a href="{{site.url}}/knowledge-centre" title="More articals about Registered Massage Therapy"><div>Knowledge Centre</div></a>
+    <li><a href="{{site.url}}/contact/index.html"><div>Contact</div></a></li>
+    <li><a href="{{site.url}}/knowledge-centre/index.html" title="More articals about Registered Massage Therapy"><div>Knowledge Centre</div></a>
       <ul>
-        <li><a href="{{site.url}}/knowledge-centre/facts-about-registered-massage-therapy-in-ontario"><div>Facts</div></a></li>
-        <li><a href="{{site.url}}/knowledge-centre/general-massage-therapy"><div>General Massage Therapy</div></a></li>
-        <li><a href="{{site.url}}/knowledge-centre/stretching"><div>Stretching</div></a></li>
-        <li><a href="{{site.url}}/knowledge-centre/rock-climbing"><div>Rock Climbing</div></a></li>
+        <li><a href="{{site.url}}/knowledge-centre/facts-about-registered-massage-therapy-in-ontario/index.html"><div>Facts</div></a></li>
+        <li><a href="{{site.url}}/knowledge-centre/general-massage-therapy/index.html"><div>General Massage Therapy</div></a></li>
+        <li><a href="{{site.url}}/knowledge-centre/stretching/index.html"><div>Stretching</div></a></li>
+        <li><a href="{{site.url}}/knowledge-centre/rock-climbing/index.html"><div>Rock Climbing</div></a></li>
       </ul>
     </li>
   </ul>
