--- a/_includes/home_page_testimonials.html
+++ b/_includes/home_page_testimonials.html
@@ -45,7 +45,7 @@
       <div class="col-md-6 bottommargin">
         <div class="testimonial">
           <div class="testi-content">
-            <p>I walked out of my first treatment with Jeremy impressed that he did exactly what I wanted him to do. Deep tissue massage treatment is nothing like a relaxing day at a spa, but it is precisely what I need... <a title="Read more KWmassage Testimonials" href="{{site.baseurl}}/about/testimonials">Read more</a></p>
+            <p>I walked out of my first treatment with Jeremy impressed that he did exactly what I wanted him to do. Deep tissue massage treatment is nothing like a relaxing day at a spa, but it is precisely what I need... <a title="Read more KWmassage Testimonials" href="{{site.baseurl}}/about/testimonials/index.html">Read more</a></p>
             <div class="testi-meta">
               Carrie
               <span>Technical Writer</span>
