--- a/_includes/page_footer.html
+++ b/_includes/page_footer.html
@@ -52,7 +52,7 @@
         <div class="container clearfix">
             <div class="col_full nobottommargin center">
                 <div class="copyrights-menu copyright-links clearfix">
-                    <a href="{{site.url}}">Home</a>/<a href="{{site.url}}/about">About</a>/<a href="{{site.url}}/clinic-information">Appointments</a>/<a href="{{site.url}}//contact">Contact</a>/<a href="{{site.url}}/knowledge-centre/">Knowledge Center</a>
+                    <a href="{{site.url}}/index.html">Home</a>/<a href="{{site.url}}/about/index.html">About</a>/<a href="{{site.url}}/clinic-information/index.html">Appointments</a>/<a href="{{site.url}}/contact/index.html">Contact</a>/<a href="{{site.url}}/knowledge-centre/index.html">Knowledge Center</a>
                 </div>
                 Copyrights &copy; 2015 All Rights Reserved by <strong>KWmassage</strong>
             </div>
@@ -60,7 +60,9 @@
     </div>
 <!-- #copyrights end -->
 </footer>
- <!-- External JavaScripts
-  ============================================= -->
-  <script type="text/javascript" src="{{site.url}}/js/jquery.js"></script>
-  <script type="text/javascript" src="{{site.url}}/js/plugins.js"></script>
+
+
+<!-- External JavaScripts
+============================================= -->
+<script type="text/javascript" src="{{site.url}}/js/jquery.js"></script>
+<script type="text/javascript" src="{{site.url}}/js/plugins.js"></script>
