--- a/_includes/page_leftcol.html
+++ b/_includes/page_leftcol.html
@@ -11,7 +11,7 @@
 
 <!-- Schedule Now Button -->
 <div>
-	<a href="{{site.baseurl}}/clinic-information" title="Schedule Massage Therapy Appointment Now" style="margin: 10px" class="btn btn-danger fright">Schedule Now</a>
+	<a href="{{site.baseurl}}/clinic-information/index.html" title="Schedule Massage Therapy Appointment Now" style="margin: 10px" class="btn btn-danger fright">Schedule Now</a>
 </div>
 <!-- Schedule Now Button Ends -->
 <div class="clearfix"></div>
@@ -23,5 +23,5 @@
 
 <!-- RMTAO Logo -->
 <div class="testimonial bottommargin-sm">
-	<a href="http://www.rmtao.com/home" target="_blank" class="widget_sp_image-image-link" title="Registered Massage Therapists Association of Ontario"><img alt="Registered Massage Therapists Association of Ontario" class="attachment-full" style="max-width: 100%;" src="{{site.url}}/assets/images/rmtao_logo_english_lead.gif"></a>
+	<a href="http://www.rmtao.com/home/" target="_blank" class="widget_sp_image-image-link" title="Registered Massage Therapists Association of Ontario"><img alt="Registered Massage Therapists Association of Ontario" class="attachment-full" style="max-width: 100%;" src="{{site.url}}/assets/images/rmtao_logo_english_lead.gif"></a>
 </div>
