--- a/_includes/tabs.html
+++ b/_includes/tabs.html
@@ -24,7 +24,7 @@
         <hr>   
         <div class="row">
           <div class="col_full noheight ">
-            <a href="{{site.baseurl}}/clinic-information" title="Schedule Massage Therapy Appointment Now" class="btn btn-danger fright nomargin">Schedule Now</a>
+            <a href="{{site.baseurl}}/clinic-information/index.html" title="Schedule Massage Therapy Appointment Now" class="btn btn-danger fright nomargin">Schedule Now</a>
           </div>
         </div>
       </div>
@@ -42,7 +42,7 @@
         </div>
         <div class="row">
           <div class="col_full noheight">
-            <a href="{{site.baseurl}}/clinic-information" title="Schedule Massage Therapy Appointment Now" class="btn btn-danger fright nomargin">Schedule Now</a>
+            <a href="{{site.baseurl}}/clinic-information/index.html" title="Schedule Massage Therapy Appointment Now" class="btn btn-danger fright nomargin">Schedule Now</a>
           </div>
         </div>
       </div>
@@ -53,7 +53,7 @@
         </div>
         <div class="row">
           <div class="col_full noheight">
-            <a href="{{site.baseurl}}/clinic-information" title="Schedule Massage Therapy Appointment Now" class="btn btn-danger fright nomargin">Schedule Now</a>
+            <a href="{{site.baseurl}}/clinic-information/index.html" title="Schedule Massage Therapy Appointment Now" class="btn btn-danger fright nomargin">Schedule Now</a>
           </div>
         </div>
       </div>
