--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -30,8 +30,8 @@
         <h1>Kitchener Massage Therapy</h1>
         <span>{{page.title}}</span>
         <ol class="breadcrumb">
-          <li><a href="{{site.url}}">Home</a></li>
-          {% if page.category %}<li><a href="{{site.url}}/{{page.category}}">{{page.category}}</a></li>{% endif %}
+          <li><a href="{{site.url}}/index.html">Home</a></li>
+          {% if page.category %}<li><a href="{{site.url}}/{{page.category}}/index.html">{{page.category}}</a></li>{% endif %}
           <li class="active">{{page.title}}</li>
         </ol>
       </div>
