--- a/_includes/page_leftcol.html
+++ b/_includes/page_leftcol.html
@@ -23,5 +23,5 @@
 
 <!-- RMTAO Logo -->
 <div class="testimonial bottommargin-sm">
-	<a href="http://www.rmtao.com/home/" target="_blank" class="widget_sp_image-image-link" title="Registered Massage Therapists Association of Ontario"><img alt="Registered Massage Therapists Association of Ontario" class="attachment-full" style="max-width: 100%;" src="{{site.url}}/assets/images/rmtao_logo_english_lead.gif"></a>
+	<a href="http://www.rmtao.com/" target="_blank" class="widget_sp_image-image-link" title="Registered Massage Therapists Association of Ontario"><img alt="Registered Massage Therapists Association of Ontario" class="attachment-full" style="max-width: 100%;" src="{{site.url}}/assets/images/rmtao_logo_english_lead.gif"></a>
 </div>
