quick-contact => footer-contact | tabs-contact

--- a/_includes/page_footer.html
+++ b/_includes/page_footer.html
@@ -6,7 +6,7 @@
             <!-- Contact Form -->
             <div class="col_one_third">
                <div class="widget quick-contact-widget">
-                    {% include contact_form.html%}
+                    {% include footer_contact_form.html%}
                 </div>
             </div>
             <!-- End Contact Form -->
@@ -61,8 +61,3 @@
 <!-- #copyrights end -->
 </footer>
 
-
-<!-- External JavaScripts
-============================================= -->
-<script type="text/javascript" src="{{site.url}}/js/jquery.js"></script>
-<script type="text/javascript" src="{{site.url}}/js/plugins.js"></script>
