--- a/_includes/tabs.html
+++ b/_includes/tabs.html
@@ -60,7 +60,7 @@
 
       <div dir="lft" class="tab-content clearfix" id="tab-contact-form">      
         <div class="widget quick-contact-widget"> 
-          {% include contact_form.html %}
+          {% include tabs_contact_form.html %}
         </div>                     
       </div>
 
