clinic container xxs

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1997,11 +1997,11 @@
 }
 
 @media (max-width: 479px) {
-
+/*
 	.container,
 	#header.full-header .container,
 	.container-fullwidth { width: 310px !important; }
-
+*/
 	.container.vertical-middle { width: 100% !important; }
 
 	.full-screen:not(.force-full-screen) .container.vertical-middle { width: 310px !important; }
