--- a/_includes/home_page_testimonials.html
+++ b/_includes/home_page_testimonials.html
@@ -8,8 +8,8 @@
         <div class="testimonial center">
           <div class="testi-content before_and_after_none">
             <p>
-              <a href="https://www.youtube.com/watch?v=oKya2ymtKYc" data-lightbox="iframe">
-                <img src="https://img.youtube.com/vi/oKya2ymtKYc/1.jpg" alt="Massage Therapist Testimonial, Kyle">
+              <a href="http://www.youtube.com/watch?v=oKya2ymtKYc" data-lightbox="iframe">
+                <img src="http://img.youtube.com/vi/oKya2ymtKYc/1.jpg" alt="Massage Therapist Testimonial, Kyle">
               </a>
             </p>
             <div class="testi-meta">
