--- a/_includes/home_page_header.html
+++ b/_includes/home_page_header.html
@@ -36,7 +36,7 @@
 
         <!-- Picture -->
         <div style="top: 0px !important" class="slider-caption leftmargin-lg notopmargin hidden-sm hidden-xs hidden-xxs">
-          <a href="http://www.youtube.com/watch?v=XSRrvEXZSdk" data-lightbox="iframe">
+          <a href="https://www.youtube.com/watch?v=XSRrvEXZSdk" data-lightbox="iframe">
             <img alt="Welcome video; Jeremy Bissonnette, Kitchner Massage Therapist" src="{{site.url}}/assets/images/picture_kitchener_massage_therapist.png">
           </a>
         </div>
