google tag manager

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
   {% include page_head.html %}
   <body class="stretched">
+  {% include google_tag %}  
   <!-- Document Wrapper
     ============================================= -->
     <div id="wrapper" class="clearfix">
