ie 10 no paralax 1

--- a/_includes/page_head.html
+++ b/_includes/page_head.html
@@ -14,13 +14,16 @@
   <link rel="stylesheet" href="{{site.url}}/css/responsive.css" type="text/css" />
   <link rel="stylesheet" href="{{site.url}}/css/colors.css" type="text/css" />
   <link rel="stylesheet" href="{{site.url}}/css/travel.css" type="text/css" />
+  <link rel="stylesheet" href="{{site.url}}/css/ie10_no_paralax.css" type="text/css" />
 
 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <!--[if lt IE 9]>
     <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
   <![endif]-->
-
+  <!--[if IE]>
+    <link rel="stylesheet" href="{{site.url}}/css/ie_no_paralax.css" type="text/css" />
+  <![endif]-->
 
 <!-- External JavaScripts
 ============================================= -->
