--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,7 +11,7 @@
 
     <!-- Page Title and content
     ============================================= -->
-    <section id="page-title" class="page-title-parallax notoppadding" style="background-repeat: no-repeat; " data-class-lg="lg-bg-image" data-class-md="lg-bg-image" data-class-sm="lg-bg-image" data-class-xs="lg-bg-image" data-class-xxs="sm-bg-image">
+    <section id="page-title" class="page-title-parallax notoppadding" style="background-repeat: no-repeat; background-color: white;" data-class-lg="lg-bg-image" data-class-md="lg-bg-image" data-class-sm="lg-bg-image" data-class-xs="lg-bg-image" data-class-xxs="sm-bg-image">
       <div class="content-wrap  notopmargin">
         <div class="container clearfix notopmargin">
 
