--- a/_layouts/home_page.html
+++ b/_layouts/home_page.html
@@ -5,7 +5,7 @@
   {% include google_tag %}
   <!-- Document Wrapper
     ============================================= -->
-    <div id="wrapper" class="clearfix">
+    <div id="wrapper" class="clearfix" style="margin-left: -15px; margin-right: -15px">
 
       {% include home_page_header.html %}
       {{content}}
