--- a/css/travel.css
+++ b/css/travel.css
@@ -51,6 +51,8 @@
 .lg-bg-image{
 	background-image: url('{{site.url}}/assets/images/bg_body_mountain.jpg');
 	background-size: 120%;
+	background-position: center top;
+	background-color: white; 
 
 }
 .testi-video{
