home page scroll, working on ie parallax

--- a/_includes/home_page_header.html
+++ b/_includes/home_page_header.html
@@ -27,7 +27,7 @@
 //     autoResize: false
 // }); 
 </script>
-<section id="slider" class="slider-parallax swiper-wrapper full-screen clearfix" style="background: url('{{site.url}}/assets/images/bg_body_mountain.jpg') center; backgroung-repeat: no-repeat; overflow: visible; background-size: cover;" data-height-lg="650" data-height-md="550" data-height-sm="550" data-height-xs="550" data-height-xxs="550">
+<section id="slider" class="slider-parallax swiper-wrapper full-screen clearfix" style="background: url('{{site.url}}/assets/images/bg_body_mountain.jpg') center; backgroung-repeat: no-repeat; overflow: visible; background-size: cover; width: 101%;" data-height-lg="650" data-height-md="550" data-height-sm="550" data-height-xs="550" data-height-xxs="550">
   <div class="swiper-container">
     <div class="swiper-wrapper">
 
