remove paralax ie

--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -24,7 +24,7 @@
 
 <!-- Page Title
     ============================================= -->
-    <section id="page-title" class="page-title-dark">
+    <section id="page-title-1" class="page-title-dark">
 
       <div class="container clearfix">
         <h1>Kitchener Massage Therapy</h1>
