--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,11 +8,12 @@
     <div id="wrapper" class="clearfix">
 
       {% include page_header.html %}
+  
       
     <!-- Page Title and content
     ============================================= -->
-    <section id="page-title" class="page-title-parallax notoppadding" style="background-repeat: no-repeat; " data-class-lg="lg-bg-image" data-class-md="lg-bg-image" data-class-sm="lg-bg-image" data-class-xs="lg-bg-image" data-class-xxs="sm-bg-image">
-      <div class="content-wrap">
+    <section id="page-title" class="page-title-parallax notoppadding nobottompadding" style="background-repeat: no-repeat; " data-class-lg="lg-bg-image" data-class-md="lg-bg-image" data-class-sm="lg-bg-image" data-class-xs="lg-bg-image" data-class-xxs="sm-bg-image">
+      <div style="background-color:white;" class="content-wrap">
         <div class="container clearfix notopmargin">
 
           <!-- Right Col -->
