--- a/_layouts/home_page.html
+++ b/_layouts/home_page.html
@@ -5,7 +5,7 @@
   {% include google_tag %}
   <!-- Document Wrapper
     ============================================= -->
-    <div id="wrapper" class="clearfix" style="margin-left: -15px; margin-right: 0">
+    <div id="wrapper" class="clearfix" data-class-lg="homepage_margin_adjust" data-class-md="homepage_margin_adjust" data-class-sm="homepage_margin_adjust" data-class-xs="homepage_margin_adjust" data-class-xxs="">
 
       {% include home_page_header.html %}
       {{content}}
