--- a/_layouts/home_page.html
+++ b/_layouts/home_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   {% include page_head.html %}
-  <body class="stretched">
+  <body class="stretched" style="margin-left: -15px; margin-right: 0;">
   {% include google_tag %}
   <!-- Document Wrapper
     ============================================= -->
