parallax ie, home page margin ready to deploy

--- a/_layouts/home_page.html
+++ b/_layouts/home_page.html
@@ -2,11 +2,11 @@
 <html lang="en-US">
   {% include page_head.html %}
   <body class="stretched">
-  <div>Test me 4</div>
+  <div>Test me 6</div>
   {% include google_tag %}
   <!-- Document Wrapper
     ============================================= -->
-    <div id="wrapper" class="clearfix" style="margin-left: -20px;">
+    <div id="wrapper" class="clearfix">
 
       {% include home_page_header.html %}
       {{content}}
