--- a/_includes/home_page_nav.html
+++ b/_includes/home_page_nav.html
@@ -14,6 +14,7 @@
       <ul>
         <li><a href="{{site.url}}/clinic-information/clinic/index.html"><div>Clinic</div></a></li>
         <li><a href="{{site.url}}/clinic-information/note-to-new-massage-therapy-clients/index.html"><div>Note to New Clients</div></a></li>
+        <li><a href="{{site.url}}/clinic-information/client-feedback/index.html"><div>Client Feedback Survey</div></a></li>
       </ul>
     </li>
     <li><a href="{{site.url}}/contact/index.html"><div>Contact</div></a></li>
