--- a/_includes/page_leftcol.html
+++ b/_includes/page_leftcol.html
@@ -1,7 +1,7 @@
 <!-- RMT Wanted -->
-<div class="rmtButton">
+<!-- <div class="rmtButton">
 	<a href="{{site.baseurl}}/generalmassagetherapy/rmt-wanted/index.html" title="KWmassage is looking for another RMT" style="" class="btn">RMT Wanted</a>
-</div>
+</div> -->
 <!-- RMT Wanted end-->
 
 <div class="clearfix"></div>
