--- a/_includes/page_nav.html
+++ b/_includes/page_nav.html
@@ -13,7 +13,8 @@
     <li><a href="{{site.baseurl}}/clinic-information/index.html" title="Book Massage Therapy Appointment Online Now"><div>Appointments</div></a>
       <ul>
         <li><a href="{{site.url}}/clinic-information/clinic/index.html"><div>Clinic</div></a></li>
-        <li><a href="{{site.baseurl}}/clinic-information/note-to-new-massage-therapy-clients/index.html"><div>Note to New Clients</div></a></li>
+        <li><a href="{{site.url}}/clinic-information/note-to-new-massage-therapy-clients/index.html"><div>Note to New Clients</div></a></li>
+        <li><a href="{{site.url}}/clinic-information/client-feedback/index.html"><div>Client Feedback Survey</div></a></li>
       </ul>
     </li>
     <li><a href="{{site.baseurl}}/contact/index.html"><div>Contact</div></a></li>
