remove contact form

--- a/_includes/tabs.html
+++ b/_includes/tabs.html
@@ -8,7 +8,7 @@
       <li class="hidden-lg hidden-md"><a href="#tab-picture"><i class="icon-line-head"></i></a></li>
       <li><a href="#tab-hours"><span class="hidden-md hidden-sm hidden-xs hidden-xxs">Hours </span><i class="icon-table"></i></a></li>
       <li><a href="#tab-rates"><span class="hidden-md hidden-sm hidden-xs hidden-xxs">Rates </span><i class="icon-dollar"></i></a></li>
-      <li><a href="#tab-contact-form"><span class="hidden-md hidden-sm hidden-xs hidden-xxs">Email </span><i class="icon-gmail"></i></a></li>
+      <!-- <li><a href="#tab-contact-form"><span class="hidden-md hidden-sm hidden-xs hidden-xxs">Email </span><i class="icon-gmail"></i></a></li> -->
     </ul>
     <!-- Tabs Nav -->
     <!-- Tabs -->
@@ -58,11 +58,11 @@
         </div>
       </div>
 
-      <div dir="lft" class="tab-content clearfix" id="tab-contact-form">      
+     <!--  <div dir="lft" class="tab-content clearfix" id="tab-contact-form">      
         <div class="widget quick-contact-widget"> 
           {% include tabs_contact_form.html %}
         </div>                     
-      </div>
+      </div> -->
 
     </div>
     <!-- Tabs -->
