--- a/_includes/page_footer.html
+++ b/_includes/page_footer.html
@@ -6,7 +6,7 @@
             <!-- Contact Form -->
             <div class="col_one_third">
                <div class="widget quick-contact-widget">
-                    {% include footer_contact_form.html%}
+                    <!-- {% include footer_contact_form.html%} -->
                 </div>
             </div>
             <!-- End Contact Form -->
