--- a/_includes/page_footer.html
+++ b/_includes/page_footer.html
@@ -33,7 +33,7 @@
                     
                     <div class="col_one_third fright col_last">
                         <div style="text-align: right" class="widget subscribe-widget clearfix">
-                            <h5 style="margin: 0">229 Frederick Street</h5>
+                            <h5 style="margin: 0">351 Carson Drive</h5>
                             <h5 style="margin: 0">Kitchener, Ontario</h5>
                             <!-- <h5 style="margin: 0">Telephone: <strong>(519)745-4112</strong></h5> -->
                             <h5 style="margin: 0">Email: <strong><a href="mailto:jeremy@kwmassage.com">jeremy@kwmassage.com</a></strong></h5>
