--- a/_includes/tabs.html
+++ b/_includes/tabs.html
@@ -36,7 +36,6 @@
       </div>
 
       <div dir="lft" class="tab-content clearfix" id="tab-hours">
-
         <div style="font-size: 16px; line-height: 18px" data-class-lg="rightmargin-sm leftmargin-sm" data-class-md="rightmargin-sm leftmargin-sm" data-class-sm="rightmargin-sm leftmargin-sm" data-class-xs="rightmargin-sm leftmargin-sm" data-class-xxs="">
           {% include timebox.html %}
         </div>
@@ -46,8 +45,8 @@
           </div>
         </div>
       </div>
+      
       <div dir="lft" class="tab-content clearfix" id="tab-rates">
-
         <div style="font-size: 16px; line-height: 18px" data-class-lg="rightmargin-lg leftmargin-lg" data-class-md="rightmargin-lg leftmargin-lg" data-class-sm="rightmargin-lg leftmargin-lg" data-class-xs="rightmargin-sm leftmargin-sm" data-class-xxs="">
           {% include ratebox.html %}
         </div>
@@ -57,8 +56,8 @@
           </div>
         </div>
       </div>
-
-     <!--  <div dir="lft" class="tab-content clearfix" id="tab-contact-form">      
+<!-- 
+      <div dir="lft" class="tab-content clearfix" id="tab-contact-form">      
         <div class="widget quick-contact-widget"> 
           {% include tabs_contact_form.html %}
         </div>                     
