--- a/_includes/footer_contact_form.html
+++ b/_includes/footer_contact_form.html
@@ -2,7 +2,7 @@
 
 <div id="footer-contact-form-result" data-notify-type="success" data-notify-msg="<i class=icon-ok-sign></i> Message Sent Successfully!"></div>
 
-<form id="footer-contact-form" name="footer-contact-form" action="/include/footercontact.php" method="post" class="nobottommargin">
+<form id="footer-contact-form" name="footer-contact-form" action="https://formspree.io/jeremy@kwmassage.com" method="post" class="nobottommargin">
 
     <div class="form-process"></div>
     <div class="input-group divcenter">
@@ -18,7 +18,7 @@
     <button type="submit" id="footer-contact-form-submit" name="footer-contact-form-submit" class="btn btn-danger fright nomargin" value="submit">Send Email</button>
 </form>
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
     $("#footer-contact-form").validate({
         submitHandler: function(form) {
             $(form).animate({ opacity: 0.4 });
@@ -37,3 +37,4 @@
     });
 </script>
 
+to revert back to php mailer incert: /include/footercontact.php in the form action  -->
