--- a/_includes/page_head.html
+++ b/_includes/page_head.html
@@ -40,6 +40,9 @@
   <meta name="description" content="{% if page.excerpt_separator %}{{ page.excerpt_separator | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   <meta name="keywords" content="{% if page.meta_keywords%}{{page.meta_keywords}}{% endif %}">
   <meta name="author" content="Jeremy Bissonnette, Registered Massage Therapist" >
+  <link rel="icon" 
+      type="image/png" 
+      href="{{site.url}}/assets/images/logo_kitchener_massage.png">
  
 </head>
 
