--- a/_includes/page_leftcol.html
+++ b/_includes/page_leftcol.html
@@ -1,3 +1,8 @@
+
+<!-- COVID Button-->
+<a href="{{site.baseurl}}/generalmassagetherapy/covid-19" title="Schedule Massage Therapy Appointment Now" style="margin: 10px" class="btn btn-danger fright">Covid-19 Update</a>
+<!-- End COvid -->
+
 <!-- Hours  -->
 {% include timebox.html %}
 <!-- Hours End -->
