--- a/_includes/tabs.html
+++ b/_includes/tabs.html
@@ -23,7 +23,10 @@
         <span style="font-size: 16px; " class="hidden-lg hidden-md hidden-sm">Specializing in Deep Tissue Massage and Trigger Point Release Therapy to bring you the relief you need from repetitive strain injuries and postural dysfunctions related to sports, the workplace, and family life.</span>
         <hr>   
         <div class="row">
-          <div class="col_full noheight ">
+          <div class="col_full noheight tab_buttons">
+
+
+            <a href="{{site.baseurl}}/generalmassagetherapy/covid-19" title="Schedule Massage Therapy Appointment Now" class="btn btn-danger fright">Covid-19 Update</a>
             <a href="{{site.baseurl}}/clinic-information/index.html" title="Schedule Massage Therapy Appointment Now" class="btn btn-danger fright nomargin">Schedule Now</a>
           </div>
         </div>
