remove cmto logo and testimonials

--- a/_includes/page_leftcol.html
+++ b/_includes/page_leftcol.html
@@ -23,9 +23,9 @@
 <div class="clearfix"></div>
 
 <!-- CMTO Logo -->
-<div class="testimonial bottommargin-sm">
+<!-- <div class="testimonial bottommargin-sm">
 	<a href="https://www.cmto.com/" target="_blank" title="College of Massage Therapists of Ontario"><img alt="College of Massage Therapists of Ontario" class="attachment-200x105" style="max-width: 100%;" src="{{site.url}}/assets/images/cmto-logo.jpg"></a>
-</div>
+</div> -->
 
 <!-- RMTAO Logo --> 
 <!-- not a succure site - remove until  -->
